# mytest3dengine

./: .gitignore  CMakeLists.txt  README.md
3dSample/: CMakeLists.txt
3dSample/include/: Resource.h
3dSample/resource/window/: 3dSample.rc
3dSample/src/: 3dSample.cpp
mytest3dengine/: CMakeLists.txt
mytest3dengine/include/core/: Core.h  Scene.h  Sprite.h  Text.h
mytest3dengine/include/export/: export.h
mytest3dengine/include/interfaces/: IFeature.h  IPositioned2d.h  IPositioned3d.h  IRenderable.h
mytest3dengine/include/interfaces/listeners/: ISpriteListener.h
mytest3dengine/src/core/: Core.cpp  Scene.cpp  Sprite.cpp  Text.cpp
mytest3dengine/src/private/include/core/: ProjectionMatrix.h  Timer.h  ViewMatrix.h
mytest3dengine/src/private/include/support/: Point2d.h  Point3d.h  Rect.h  Vertex3PN.h  Vertex3PNT.h
mytest3dengine/src/private/src/core/: ProjectionMatrix.cpp  Timer.cpp  ViewMatrix.cpp
mytest3dengine/src/private/src/support/: Vertex3PN.cpp  Vertex3PNT.cpp
